src/tokenizer/snapshots/reconcile__tokenizer__line_tokenizer__tests__with_snapshots-2.snap
---
source: src/tokenizer/line_tokenizer.rs
expression: "line_tokenizer(\"Hello\")"
snapshot_kind: text
---
[
    Token {
        normalised: "Hello",
        original: "Hello",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
