src/tokenizer/snapshots/reconcile__tokenizer__line_tokenizer__tests__with_snapshots-3.snap
---
source: src/tokenizer/line_tokenizer.rs
expression: "line_tokenizer(\"Hello\\nWorld\")"
snapshot_kind: text
---
[
    Token {
        normalized: "Hello",
        original: "Hello",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "\n",
        original: "\n",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "World",
        original: "World",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
