src/tokenizer/snapshots/reconcile__tokenizer__line_tokenizer__tests__with_snapshots-4.snap
---
source: src/tokenizer/line_tokenizer.rs
expression: "line_tokenizer(\"Hello\\nWorld\\n\")"
snapshot_kind: text
---
[
    Token {
        normalised: "Hello",
        original: "Hello",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalised: "\n",
        original: "\n",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalised: "World",
        original: "World",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalised: "\n",
        original: "\n",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
