src/tokenizer/snapshots/reconcile__tokenizer__line_tokenizer__tests__with_snapshots-5.snap
---
source: src/tokenizer/line_tokenizer.rs
expression: "line_tokenizer(\"Line 1\\r\\nLine 2\")"
snapshot_kind: text
---
[
    Token {
        normalized: "Line 1",
        original: "Line 1",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "\r\n",
        original: "\r\n",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "Line 2",
        original: "Line 2",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
