src/tokenizer/snapshots/reconcile__tokenizer__line_tokenizer__tests__with_snapshots-8.snap
---
source: src/tokenizer/line_tokenizer.rs
expression: "line_tokenizer(\"\\n\\n\")"
snapshot_kind: text
---
[
    Token {
        normalized: "\n",
        original: "\n",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "\n",
        original: "\n",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
