src/tokenizer/snapshots/reconcile__tokenizer__line_tokenizer__tests__with_snapshots-9.snap
---
source: src/tokenizer/line_tokenizer.rs
expression: "line_tokenizer(\"Start\\n\\nEnd\")"
snapshot_kind: text
---
[
    Token {
        normalized: "Start",
        original: "Start",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "\n",
        original: "\n",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "\n",
        original: "\n",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "End",
        original: "End",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
