src/tokenizer/snapshots/reconcile__tokenizer__line_tokenizer__tests__with_snapshots.snap
---
source: src/tokenizer/line_tokenizer.rs
expression: "line_tokenizer(\"\")"
snapshot_kind: text
---
[]
